Added parameters to commits and deploys
