# internal/structs/structs.go
@@ -3,8 +3,16 @@ package structs
 import "github.com/redhatinsights/platform-changelog-go/internal/models"
 
 type Query struct {
-	Offset int
-	Limit  int
+	Offset     int
+	Limit      int
+	Ref        []string
+	Repo       []string
+	Author     []string
+	Merged_By  []string
+	Cluster    []string
+	Image      []string
+	Start_Date string
+	End_Date   string
 }
 type ServicesList struct {
 	Count int64          `json:"count"`
